# research-automation

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TESTING_GUIDE.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json  daemon.pid
.claude-flow/agents/: store.json
.claude-flow/metrics/: codebase-map.json  consolidation.json  learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.github/workflows/: auto-test.yml  ci.yml  docs.yml  paper.yml  release.yml
.swarm/: hnsw.index  model-router-state.json  schema.sql
api/: index.html
archived/: chat-1e42abd0-init-ux-overhaul.jsonl  feature-requests-all-chats.md  feature-requests-chat-1e42abd0.md
archived/deprecated/: BUILD_LOG.md  README.md
cli/: dashboard.py  gallery.py  main.py
core/: _agents_legacy.py  adopt.py  agents.py  auto_commit.py  auto_debug.py  auto_docs.py  auto_test.py  automation_utils.py  autonomous.py  browser.py  claude_flow.py  claude_helper.py  collaboration.py  cross_repo.py  devops.py  doability.py  environment.py  git_worktrees.py  knowledge.py  latex_scaffold.py  lazy_mcp.py  markdown_commands.py  mcps.py  meta_rules.py  mobile.py  mobile_pwa.py  model_router.py  multi_project.py  notifications.py  onboarding.py  paper.py  prompt_queue.py  prompt_suggestions.py  rag_mcp.py  report.py  reproducibility.py  resources.py  security.py  session.py  social_media.py  (+7 more)
defaults/: CODE_STYLE.md  LEGISLATION.md  MCP_CATALOG.md  MCP_NUCLEUS.json  ONBOARDING.md  PHILOSOPHY.md  PROMPTS.md
demo/: README.md  conftest.py  docker-compose.demo.yml  human_testing_checklist.md  test_phase1_init.py  test_phase2_session.py  test_phase3_voice_mobile.py  test_phase4_overnight.py  test_phase5_paper.py  test_phase6_deploy.py  test_phase7_multi_project.py  test_phase8_advanced.py  test_phase9_integration.py
demo/scripts/: run_all.sh  run_in_docker.sh
deprecated/: BOOTSTRAP-old.md  BOOTSTRAP.md  BUILD_LOG.md  README.md  TODO_prep.md
docker/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh  permissions.md
docs/: BUILD_LOG.md  FEATURES_VS_REALITY.md  PROMPT_VS_REALITY.md  SPEC.md  TODO.md  demo.md
docs/site/: api.md  architecture.md  faq.md  features.md  index.md  installation.md  mkdocs.yml  mobile.md  (+1 more)
installation/: index.html
scripts/: interactive.sh  overnight-enhanced.sh  overnight.sh  setup.sh  setup_claude_flow.sh
search/: search_index.json
site/: 404.html
state/: PROGRESS.md
templates/: .gitignore
tests/: conftest.py  run_real_integration.py  test_adopt.py  test_agents.py  test_auto_commit.py  test_auto_debug.py  test_auto_docs.py  test_automation_utils.py  test_autonomous.py  test_browser.py  test_claude_flow.py  test_claude_helper.py  test_collaboration.py  test_cross_repo.py  test_devops.py  test_doability.py  test_environment.py  test_gallery.py  test_git_worktrees.py  test_goal_orchestration.py  test_integration_bridge.py  test_integration_scientific.py  test_knowledge.py  test_lazy_mcp.py  test_markdown_commands.py  test_mcps.py  test_meta_rules.py  test_mobile.py  test_model_router.py  test_multi_project.py  test_notifications.py  test_onboarding.py  test_paper.py  test_prompt_queue.py  test_prompt_suggestions.py  test_rag_mcp.py  test_reproducibility.py  test_resources.py  test_security.py  test_session.py  (+9 more)
(+59 files in other folders)
