[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "research-automation"
version = "0.1.0"
description = "Scientific research automation using Claude Code"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ml = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
]
all = [
    "research-automation[ml]",
    "chromadb",
    "sentence-transformers",
    "torch",
    "jupyter",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
research = "cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
