[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-automation"
version = "0.2.0"
description = "Scientific research automation framework powered by Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "fusar"},
]
keywords = [
    "research",
    "automation",
    "scientific-computing",
    "claude",
    "ai-assisted",
    "paper-writing",
    "experiment-tracking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/lucafusarbassini/research-automation"
Documentation = "https://github.com/lucafusarbassini/research-automation#readme"
Repository = "https://github.com/lucafusarbassini/research-automation"
Issues = "https://github.com/lucafusarbassini/research-automation/issues"

[project.optional-dependencies]
ml = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "torch",
]
paper = []  # LaTeX toolchain is external; no Python deps required
browser = []  # Puppeteer is Node.js; no Python deps required
data = [
    "daft",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]
all = [
    "research-automation[ml]",
    "research-automation[data]",
]

[project.scripts]
research = "cli.main:app"

[tool.setuptools.packages.find]
include = ["cli*", "core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["cli", "core"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
